--- a/app/index.html
+++ b/app/index.html
@@ -19,25 +19,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <iframe id="sc-widget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F1848538&show_artwork=true"></iframe>
-        <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
-        <script type="text/javascript">
-          (function(){
-            var widgetIframe = document.getElementById('sc-widget'),
-                widget       = SC.Widget(widgetIframe),
-                newSoundUrl = 'http://api.soundcloud.com/tracks/13692671';
-
-            widget.bind(SC.Widget.Events.READY, function() {
-              // load new widget
-              widget.bind(SC.Widget.Events.FINISH, function() {
-                widget.load(newSoundUrl, {
-                  show_artwork: false
-                });
-              });
-            });
-
-          }());
-        </script>
+        <div id="app"></div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
